[metadata]
name = cloudflare_dns_update
version = 0.1
license = unlicensed
description = Updates "A" dns records with script runners current public ip.
long_description = file: README.rst
author = mpowerPC
author_email = mpowerpc@gmail.com
classifiers=
   Development Status :: 1 - Planning
   Environment :: Console
   Intended Audience :: System Administrators
   License :: Public Domain
   Programming Language :: Python
   Topic :: Internet :: Name Service (DNS)

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   requests

[options.packages.find]
where=src
