[metadata]
name = cloudflare_dns_update
url = https://github.com/mpowerPC/cloudflare_dns_api
version = 0.1
license = unlicensed
description = Manage Cloudflare DNS records for specified zone.
long_description = file: README.rst
author = mpowerPC
author_email = mpowerpc@gmail.com
platforms = any
classifiers=
   Development Status :: 2 - Pre-Alpha
   Environment :: Console
   Intended Audience :: System Administrators
   License :: Public Domain
   Programming Language :: Python
   Topic :: Internet :: Name Service (DNS)

[options]
packages = find:
include_package_data = True
install_requires =
   requests
